--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <h3>Songdis.com</h3>
-        <p>Your number one music distribution company in africa, by africa, for africa</p>
+        <p>Get Your Music Everywhere In Simple Steps! <br>
+            Music Distribution and Co-Management <br>
+            For Independent Artist And Label <br>
+            Powered by The Heavenly Wave</p>
         <h1>Coming Soon</h1>
         <p>We're working hard to get our site ready. Stay tuned</p>
         <div id="countdown">
