--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="logo.png" alt="Logo" class="logo">
         <h3>Songdis.com</h3>
         <p>Get Your Music Everywhere In Simple Steps! <br>
             Music Distribution and Co-Management <br>
